--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,6 @@ body {
 }
 
 .header {
-  position: relative;
   background-color: #222222;
 }
 
@@ -29,6 +28,8 @@ body {
 .container {
   margin: 0 auto;
   width: 1140px;
+  position: relative;
+  display: inline-block;
 }
 
 .visually_hidden {
@@ -117,7 +118,7 @@ body {
   min-width: 232px;
   background-color: #ffffff;
   border: 1px solid #e8e8e8;
-  box-shadow: -9px 0px 26px 0px rgba #6f6e6e;
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
   padding: 37px 33px;
 }
 
