--- a/styles/style.css
+++ b/styles/style.css
@@ -311,3 +311,118 @@ body {
   color: #f16d7f;
   font-weight: 700;
 }
+
+/* FETURED SECTION STYLES */
+
+.fetured {
+  padding-bottom: 95px;
+}
+.fetured_heading {
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 36px;
+  color: #222222;
+  padding-bottom: 6px;
+  text-align: center;
+}
+
+.fetured_paragraph {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #9f9f9f;
+  padding-bottom: 48px;
+  text-align: center;
+}
+
+.fetured_cards {
+  display: grid;
+  grid-template-columns: repeat(3, 360px);
+  gap: 30px;
+  justify-content: center;
+}
+
+.fetured_card {
+  position: relative;
+  background-position: center;
+  background-size: cover;
+  list-style: none;
+  min-height: 420px;
+  margin-bottom: 48px;
+}
+
+.card_link {
+  text-decoration: none;
+}
+.card_heading {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+  color: #000000;
+}
+
+.card_discription {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  color: #5d5d5d;
+}
+.card_price {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #f16d7f;
+}
+
+.fetured_button {
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 0 30px;
+  margin: 0 25px 25px 0;
+  outline: none;
+  border: 1px solid #f26376;
+  background-color: #fff;
+  height: 48px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #f26376;
+  cursor: pointer;
+}
+
+/* PROPOSAL SECTION STYLES */
+.proposal {
+  background-color: #222222;
+}
+.proposal_list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 341px;
+  list-style: none;
+}
+
+.proposal_heading {
+  font-weight: 400;
+  font-size: 19.96px;
+  line-height: 24px;
+  color: #fbfbfb;
+  margin-bottom: 16px;
+  text-align: center;
+}
+.proposal_paragraph {
+  font-weight: 300;
+  font-size: 13.972px;
+  line-height: 17px;
+  color: #fbfbfb;
+  text-align: center;
+}
+/* FOOTER TYLES */
+
+.footer .container {
+  display: flex;
+  justify-content: space-between;
+}
+.footer_inner {
+  background-image: url(../images/subscrb_background.png);
+}
