styles for footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -449,10 +449,32 @@ body {
 }
 /* FOOTER TYLES */
 
-.footer .container {
-  display: flex;
-  justify-content: space-between;
-}
 .footer_inner {
   background-image: url(../images/subscrb_background.png);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 448px;
+}
+
+.footer_inner_2 {
+  background-color: rgba(34, 34, 36, 1);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 80px;
+}
+.footer_inner_copy_text {
+  color: rgba(251, 251, 251, 1);
+}
+.footer_inner_links_media {
+  list-style-type: none;
+}
+.footer_inner_link {
+  display: inline-block;
+  text-align: center;
+  line-height: 32px;
+  width: 32px;
+  height: 32px;
+  background-color: rgba(255, 255, 255, 1);
 }
